src/snapshots/tat__app__test__open_table_again.snap
---
source: src/app.rs
expression: terminal.backend()
---
"                                               point                                               ▲"
"                                                                                                   █"
"Feature   │geom                                         field                                      █"
"1         │POINT (0 0)                                  NULL                                       █"
"2         │POINT (1 0)                                  NULL                                       █"
"3         │POINT (1 1)                                  NULL                                       █"
"4         │POIN                                                                                    █"
"          │     ╭────────────────────────────── Help ──────────────────────────────╮               █"
"          │     │Keybinds for Attribute Table                                     ▲│               █"
"          │     │----------------------------                                     █│               █"
"          │     │Basic Navigation:                                                █│               █"
"          │     │     or 'h': Left                                               █│               █"
"          │     │     or 'j': Down                                               █│               █"
"          │     │     or 'k': Up                                                 █│               █"
"          │     │     or 'l': Right                                              █│               █"
"          │     │                                                                 █│               █"
"          │     │Table:                                                           █│               █"
"          │     │    ':' : Open Dialog to Jump to Specific Feature                █│               █"
"          │     │    Enter: Display Selected Value in Pop-Up                      █│               █"
"          │     │    y or CTRL + C: Copy Selected Value to Clipboard              █│               █"
"          │     │                                                                 █│               █"
"          │     │General:                                                         █│               █"
"          │     │    'q': Previous Menu                                           █│               █"
"          │     │    CTRL + Q: Quit                                               █│               █"
"          │     │    '?': Show Help                                               ║│               █"
"          │     │                                                                 ║│               █"
"          │     │Advanced Navigation:                                             ║│               █"
"          │     │    Home or '0': nav to First Column                             ║│               █"
"          │     │    End or '$': nav to Last Column                               ║│               █"
"          │     │    'g': Scroll to Top                                           ║│               █"
"          │     │    'G': Scroll to Bottom                                        ║│               █"
"          │     │ ◄███████████████████████████████████████████████████═══════════►▼│               █"
"          │     ╰─────────────────────── <press q to close> ───────────────────────╯               █"
"          │                                                                                        █"
"          │                                                                                        █"
"          │                                                                                        █"
"          │                                                                                        █"
"          │                                                                                        █"
"────────────────────────────────────── <type ? to show help> ──────────────────────────────────────▼"
"◄██████████████████████████████████████████████████████████████████████████████████████████████████►"
