src/snapshots/tat__app__test__render_main_menu-2.snap
---
source: src/app.rs
expression: terminal.backend()
---
"                                      Terminal Attribute Table                                      "
"                                                                                                    "
"╭ Dataset ──────────────────────────── <type ? to show help> ──────────────────────────────────────╮"
"│- URI: "./testdata/basic.gpkg"                                                                    │"
"│- Driver: GeoPackage (GPKG)                                                                       │"
"│                                                                                                  │"
"│ Layers ─────┬ Layer Information ────────┬ Preview Table ─────────────────────────────────────────┤"
"│point        │ame: point                 │          │                                             │"
"│line         │RS: EPSG:3857 (WGS 84 / Pse│Feature   │geom                                         │"
"│polygon      │eature Count: 4            │1         │POINT (0 0)                                  │"
"│multipolygon │eometry fields:            │2         │POINT (1 0)                                  │"
"│nogeom       │ "geom" - (Point, EPSG:3857│3         │POINT (1 1)                                  │"
"│             │ields (1):                 │4         │POINT (0 1)                                  │"
"│             │ "field" - (Integer)       │          │                                             │"
"│             │                           │          │                                             │"
"│             │                           │          │                                             │"
"│             │                           │          │                                             │"
"│             │                           │          │                                             │"
"│             │                           │          │                                             │"
"│             │                           │          │                                             │"
"│             │                           │          │                                             │"
"│             │                           │          │                                             │"
"│             │                           │          │                                             │"
"│             │                           │          │                                             │"
"│             │                           │          │                                             │"
"│             │                           │          │                                             │"
"│             │                           │          │                                             │"
"│             │                           │          │                                             │"
"│             │                           │          │                                             │"
"│             │                           │          │                                             │"
"│             │                           │          │                                             │"
"│             │                           │          │                                             │"
"│             │                           │          │                                             │"
"│             │                           │          │                                             │"
"│             │                           │          │                                             │"
"│             │                           │          │                                             │"
"│             │                           │          │                                             │"
"│             │                           │          │                                             │"
"│             │◄══████████████████═══════►│          │                                             │"
"╰─────────────┴───────────────────────────┴────────────── <Enter> to open full table ──────────────╯"
